# IRIS

./: .SourceSageignore  .gitignore  .iris.SourceSageignore  README.md  pyproject.toml  requirements.txt
.github/: config.py  requirements.txt
.github/repository_summary/: .iris.SourceSageignore
.github/scripts/: deep_comment.py  generate_github_release_notes.py  process_issue.py  suggest_changes.py  translate_readme.py  update_readme.py
.github/services/: github_service.py  llm_service.py
.github/workflows/: apply-suggestion.yml  generate-release-notes.yml  issue-deep-comment.yml  issue-review.yml  translate-readme.yml  update-readme-workflow.yml
.harmon_ai/: README_template.md  publish-to-pypi.yml  repository_summary_raw.md  sections_template_llm.md
docs/: .sourcesage_releasenotes.yml  README.en.md  usage.md
example/: demo.py
iris_coon/: __init__.py  cli.py  core.py
